@@ -12,10 +12,6 @@ foreach (Nag::listTasklists() as $id => $tl) {
     if ($tl->get('owner') && $tl->get('owner') == $current_user) {
         $my_tasklists[$id] = $tl;
     } else {
-        if (!empty($conf['share']['hidden']) &&
-            !in_array($tl->getName(), $display_tasklists)) {
-            continue;
-        }
         $shared_tasklists[$id] = $tl;
     }
 }
