@@ -2,6 +2,8 @@
 v3.0.3-git
 ----------
 
+[jan] Don't load all shares with requested permissions from the backend if
+      $conf['share']['hidden'] is enabled.
 
 
 ------
